--- a/app/assets/stylesheets/fisica.scss
+++ b/app/assets/stylesheets/fisica.scss
@@ -1,3 +1,45 @@
 // Place all the styles related to the fisica controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+/* HEADER */
+.header{
+	background-color:black;
+	padding:0.3em;
+	margin-bottom:0.9em;
+	color:white;
+}
+
+/*   CONTAINER   */
+
+#container{
+	background-color:black;
+	width:1000px;
+	height:500px;
+	float:left;
+}
+
+
+/* MENU  */
+#menu {
+	width: 200px;
+	float:left;
+	margin: 0.4em;
+}
+#menu button{
+	background-color: #eee; 
+    color: black; 
+    display: block; 
+    padding: 12px; 
+    text-decoration: none; 
+    width:200px;
+    margin-bottom: 0.3em;
+}
+#menu button:hover{
+	background-color: #ccc;
+}
+
+/* BIG BOX */
+.big-box{
+	display:inline-block;
+}
