--- a/app/views/fisica/campoelectrico.html.erb
+++ b/app/views/fisica/campoelectrico.html.erb
@@ -20,11 +20,14 @@
   <h1><small>Campo eléctrico debido a una línea uniformemente cargada</small></h1>
 </div>
 <!-- KONVA -->
+<div class="btn-group menu2" role="group">
+    <button type="button" onclick="start()" class="btn btn-default">Start</button>
+    <button type="button" onclick="movePointI()" class="btn btn-default">◄ Move point left</button>
+    <button type="button" onclick="movePointR()" class="btn btn-default">Move point right ►</button>
+    <button type="button" onclick="movePointTo()" class="btn btn-default">Move point to</button>
+</div>
+
 <div id="container2"></div>
-<button onclick="start()">Start</button>
-<button onclick="movePointR()">Move point right</button>
-<button onclick="movePointI()">Move point left</button>
-<button onclick="movePointTo()">Move point to</button>
 
   <script type="text/javascript">
 
