--- a/app/views/fisica/index.html.erb
+++ b/app/views/fisica/index.html.erb
@@ -24,10 +24,10 @@
   <div class="parent">
     <div id="menu">
       <ul class="nav nav-pills nav-stacked">
-        <li><button onclick="addCharge()"><a name="btn1" id="btn1">Agregar carga</a></button></li>
-        <li><button><a name="btn2" id="btn2">Remover carga</a></button></li>
-        <li><button><a name="btn3" id="btn3">Modificar carga</a></button></li>
-        <li><button onclick="start()"><a name="btn4" id="btn4">Animar cargas</a></button></li>
+        <li><button onclick="addCharge()">Agregar carga</button></li>
+        <li><button>Remover carga</button></li>
+        <li><button>Modificar carga</button></li>
+        <li><button onclick="start()">Animar cargas</button></li>
       </ul>
     </div>
 
