--- a/app/assets/stylesheets/fisica.scss
+++ b/app/assets/stylesheets/fisica.scss
@@ -72,6 +72,7 @@
 }
 .menu2{
   margin-bottom: 10px;
+  margin-left: 7px;
 }
 .page-header{
   padding-left:1.3em;
@@ -83,4 +84,39 @@
 /* AUTHORS PAGE */
 .navbar-header a{
   color:white;
+}
+
+.video{
+  background-color: #0f0f0f;
+  color:white;
+  width: 100%;
+  padding: 20px;
+  margin-bottom:15px;
+}
+.daniel{
+  background-color: #0f0f0f;
+  width: 100%;
+  color:white;
+  padding:15px;
+  margin-top: 8px;
+  margin-bottom: 8px;
+  display: none;
+}
+.hector{
+  background-color: #0f0f0f;
+  width: 100%;
+  color:white;
+  padding:15px;
+  margin-top: 8px;
+  margin-bottom: 8px;
+  display: none;
+}
+.ronnie{
+  background-color: #0f0f0f;
+  width: 100%;
+  color:white;
+  padding:15px;
+  margin-top: 8px;
+  margin-bottom: 8px;
+  display: none;
 }
