--- a/app/views/fisica/campoelectrico.html.erb
+++ b/app/views/fisica/campoelectrico.html.erb
@@ -6,11 +6,15 @@
     <div class="container-fluid">
       <div class="navbar-header">
         <a class="navbar-brand" href="/fisica/authors">PROYECTO FINAL FISICA III</a>
+        <!-- <a class="navbar-brand" href="/fisica/authors">PROYECTO FINAL FISICA III</a> -->
       </div>
       <ul class="nav navbar-nav">
-        <li><a href="index">Interaccion entre cargas electricas</a></li>
-        <li class="active"><a href="/fisica/index">Campo electrico debido cargas en linea infinita</a></li>
-        <li><a href="/fisica/index">Circuitos eléctricos</a></li>
+        <li><%= link_to "Interaccion entre cargas electricas", fisica_index_path %></li>
+        <li class="active">
+        <%= link_to "Campo electrico debido cargas en linea infinita", fisica_campoelectrico_path %>
+        <!-- <li><a href="/fisica/campoelectrico">Campo electrico debido cargas en linea infinita</a></li> -->
+        </li>
+        <li><%= link_to "Circuitos eléctricos", fisica_circuitos_path %></li>
       </ul>
     </div>
   </nav>
@@ -76,8 +80,10 @@
       {
           if (E !== null) E.hide();
 
-          point.x((point.x() + 5));
-          layer.draw();
+          if(point.x()  < 1000) {
+              point.x((point.x() + 5));
+              layer.draw();
+          }
       }
       function movePointI()
       {
@@ -88,10 +94,6 @@
               point.x((point.x() - 5));
               layer.draw();
           }
-          else
-          {
-              window.alert("La position x debe estar en el intervalo [50, 1000].");
-          }
 
       }
       function  movePointTo(x)
@@ -101,13 +103,13 @@
           if (input !== null) {
               try {
                   let xpos = parseFloat(input);
-                  if(xpos >= 50 && xpos <= 1000) {
+                  if(xpos > 50 && xpos < 1000) {
                       point.x(xpos);
                       layer.draw();
                   }
                   else
                   {
-                      window.alert("La position x debe estar en el intervalo [50, 1000].");
+                      window.alert("La position x debe estar en el intervalo (50, 1000).");
                   }
               }
               catch (e) {
