--- a/app/views/fisica/authors.html.erb
+++ b/app/views/fisica/authors.html.erb
@@ -4,12 +4,16 @@
   <nav class="navbar navbar-inverse">
     <div class="container-fluid">
       <div class="navbar-header">
-        <a class="navbar-brand" href="/fisica/author">PROYECTO FINAL FISICA III</a>
+        <a class="navbar-brand" href="/fisica/authors">PROYECTO FINAL FISICA III</a>
+        <!-- <a class="navbar-brand" href="/fisica/authors">PROYECTO FINAL FISICA III</a> -->
       </div>
       <ul class="nav navbar-nav">
-        <li><a href="/fisica/index">Interaccion entre cargas electricas</a></li>
-        <li><a href="/fisica/index">Campo electrico debido cargas en linea infinita</a></li>
-        <li><a href="/fisica/index">Circuitos eléctricos</a></li>
+        <li><%= link_to "Interaccion entre cargas electricas", fisica_index_path %></li>
+        <li>
+          <%= link_to "Campo electrico debido cargas en linea infinita", fisica_campoelectrico_path %>
+          <!-- <li><a href="/fisica/campoelectrico">Campo electrico debido cargas en linea infinita</a></li> -->
+        </li>
+        <li><%= link_to "Circuitos eléctricos", fisica_circuitos_path %></li>
       </ul>
     </div>
   </nav>
@@ -19,6 +23,56 @@
 <div class="page-header">
   <h1><small>PRESENTACION DEL PROYECTO FINAL DE FISICA III</small></h1>
 </div>
-<div>
-
+<!-- VIDEO -->
+<div class="video">
+  <div align="center"><h4>REALIZACION Y PRESENTACION DEL PROYECTO FINAL</h4></div>
+  <div align="center"><iframe width="560" height="315" src="https://www.youtube.com/embed/dST_xOvhhs8" frameborder="4" allowfullscreen></iframe></div>
+  <p></p>
 </div>
+<!-- OTHER INFO  -->
+<div align="center">
+  <ul class="nav nav-tabs">
+    <li role="presentation"><button onclick="showHector()" >Hector Andrés</button></li>
+    <li role="presentation"><button onclick="showDaniel()" >Daniel Peña</button></li>
+    <li role="presentation"><button onclick="showRonnie()" >Ronnie Peralta</button></li>
+  </ul>
+</div>
+<!-- Almacenar en un base de datos nombre, id, edad, carrera, bio -->
+
+<div class="daniel" id="daniel" align="center">
+  <h4><%= @users[0].nombre %> <%= @users[0].apellido %> </h4>
+  <p>ID: <%= @users[0].matricula %></p><br>
+  <p>Carrera: <%= @users[0].carrera %></p><br>
+  <p>Biografia: <%= @users[0].bio %></p>
+</div>
+<div class="hector" id="hector" align="center">
+  <h4><%= @users[1].nombre %> <%= @users[1].apellido %> </h4>
+  <p>ID: <%= @users[1].matricula %></p><br>
+  <p>Carrera: <%= @users[1].carrera %></p><br>
+  <p>Biografia: <%= @users[1].bio %></p>
+</div>
+<div class="ronnie" id="ronnie" align="center">
+  <h4><%= @users[2].nombre %> <%= @users[2].apellido %> </h4>
+  <p>ID: <%= @users[2].matricula %></p><br>
+  <p>Carrera: <%= @users[2].carrera %></p><br>
+  <p>Biografia: <%= @users[2].bio %></p>
+</div>
+
+<script type="text/javascript">
+  function showHector() {
+      document.getElementById("daniel").style.display = "none";
+      document.getElementById("ronnie").style.display = "none";
+      document.getElementById("hector").style.display = "block";
+  }
+  function showDaniel()
+  {
+      document.getElementById("daniel").style.display = "block";
+      document.getElementById("ronnie").style.display = "none";
+      document.getElementById("hector").style.display = "none";
+  }
+  function showRonnie() {
+      document.getElementById("daniel").style.display = "none";
+      document.getElementById("ronnie").style.display = "block";
+      document.getElementById("hector").style.display = "none";
+  }
+</script>
